--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <h1>Welkom bij de Black Mamba</h1>
 <nav>
 <a href="index.html">Over Black Mamba</a>
-<a href="galerij.html">Afbeeldingen</a>
-<a href="info.html">Contact</a>
+<a href="https://haolim82.github.io/HLdev.nl/galerij.html">Afbeeldingen</a>
+<a href="https://haolim82.github.io/HLdev.nl/info.html">Contact</a>
 </nav>
 </header>
 <body>
