--- a/galerij.html
+++ b/galerij.html
@@ -5,7 +5,7 @@
 <header><img src="Afbeeldingen/logo-no-background.png" width="200x100">
     <h1>Welkom bij de Black Mamba</h1>
 <nav>
-<a href="https://github.com/HaoLim82/HLdev.nl.git">Over Black Mamba</a>
+<a href="https://github.com/HaoLim82/HLdev.nl.git/index.html">Over Black Mamba</a>
 <a href="https://github.com/HaoLim82/HLdev.nl.git/galerij.html">Afbeeldingen</a>
 <a href="https://github.com/HaoLim82/HLdev.nl.git/info.html">Contact</a>
 </nav>
