--- a/info.html
+++ b/info.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Black Mamba</title>
+<title>Black Mamba</title></html>
 <head></head>
 <header><img src="Afbeeldingen/logo-no-background.png" width="200" height="100">
     <h1>Welkom bij de Black Mamba</h1>
