--- a/galerij.html
+++ b/galerij.html
@@ -11,7 +11,7 @@
 </nav>
 </header>
 <body>
-<img src="afbeeldingen/blackmamba.jpg"width="300x200"><br>Bron:Reddit/xTeeBone<br>
+<img src="Afbeeldingen/blackmamba.jpg"width="300x200"><br>Bron:Reddit/xTeeBone<br>
 <img src="Afbeeldingen/Black_mamba_first_drop.jpg" width="300x200"><br>Bron:Wikipedia<br>
 <img src="Afbeeldingen/Black_mamba_looping.jpg" width="300x200"><br>Bron:Wikipedia<br>
 
