--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <h1>Welkom bij de Black Mamba</h1>
 <nav>
 <a href="https://github.com/HaoLim82/HLdev.nl.git/index.html">Over Black Mamba</a>
-<a href="https://github.com/HaoLim82/HLdev.nl.git/galerij.html">Afbeeldingen</a>
-<a href="https://github.com/HaoLim82/HLdev.nl.git/info.html">Contact</a>
+<a href="galerij.html">Afbeeldingen</a>
+<a href="info.html">Contact</a>
 </nav>
 </header>
 <body>
