--- a/info.html
+++ b/info.html
@@ -5,8 +5,8 @@
 <header><img src="Afbeeldingen/logo-no-background.png" width="200" height="100">
     <h1>Welkom bij de Black Mamba</h1>
 <nav>
-<a href="index.html">Over Black Mamba</a>
-<a href="galerij.html">Afbeeldingen</a>
+<a href="https://github.com/HaoLim82/HLdev.nl.git/index.html">Over Black Mamba</a>
+<a href="https://github.com/HaoLim82/HLdev.nl.git/galerij.html">Afbeeldingen</a>
 <a href="https://github.com/HaoLim82/HLdev.nl.git/info.html">Contact</a>
 </nav>
 </header>
