--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Black Mamba</title></html>
 <head></head>
-<header><img src="Afbeeldingen/logo-no-background.png" width="200" height="100">
+<header><img src="Afbeeldingen/logo-no-background.png" width="200x100">
     <h1>Welkom bij de Black Mamba</h1>
 <nav>
 <a href="https://github.com/HaoLim82/HLdev.nl.git/index.html">Over Black Mamba</a>
